fixed readability warnings found in lighthouse

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,13 @@ h1, h2, h3, h4, h5{
     font-weight: 700;
 }
 
+.user-pass-text {
+    font-family: sans-serif;
+    font-weight: 700;
+    font-size: x-large!important;
+    color: #000000!important;
+}
+
 main {
     flex: 1 0 auto;
   }
